[project]
name = "nqm.irimager"
version = "0.1.0a0" # equivalent to 0.1.0-alpha.0
description = "Python module for interfacing with EvoCortex IRImagerDirect SDK"
requires-python = ">=3.8, <4.0"
authors = [
    { name = "Alois Klink", email = "alois@nquiringminds.com" }
]
readme = "README.md"

dependencies = [
    "numpy >=1.24.3, <1.25.0"
]

[build-system]
requires = [
    "scikit-build-core>=0.4.7",
    "pybind11>=2.10.4",
    # until https://github.com/pybind/pybind11_mkdoc/pull/32 is merged
    "pybind11_mkdoc @ git+https://github.com/corna/pybind11_mkdoc.git#e71d15f12f4c6eee1d04c724cb5946a5d8ef149d"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = [ "src/nqm" ]
wheel.license-files = [ "LICENSES/*" ]

[tool.pylint.main]
# checks Google-style docstrings
load-plugins="pylint.extensions.docparams"

[tool.pylint."messages control"]
# isort sorts our imports for us and we occasionally get conflicts
disable = ["wrong-import-position"]

[tool.pylint.format]
# for compatibility with black
max-line-length = "88"

[tool.isort]
profile = "black"

[tool.mypy]
# required since we store our data in a src/ subdir
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit >=2.21.0, <3.0.0",
    "pylint >=2.15.10, <3.0.0",
    "isort>=5.12.0",
]
types = [
    "mypy>=1.4.1",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "sphinx>=5.3.0",
    "myst-parser >=0.18.1, <0.19.0",
]

[tool.cibuildwheel]
build = "cp*-manylinux_*" # any standard CPython Linux
archs = [
    "auto64" # skip building 32-bit builds
]
test-command = "pytest {project}/tests"
test-requires = "pytest"

# libirimager needs a relatively new stdc++ library
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
